--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -12,18 +12,18 @@ on:
 jobs:
   deploy:
     runs-on: ubuntu-20.04
-    env:
-      npm_config_platform: linux
-      npm_config_arch: x64
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      # ref) https://github.com/marketplace/actions/github-action-for-yarn
-      - name: Setup Yarn
-        uses: borales/actions-yarn@v2.3.0
+      - name: Setup Node
+        uses: actions/setup-node@v3
         with:
-          cmd: install      # will run `yarn install` command
+          node-version: 16
+
+      - name: Install
+        run: yarn install
 
       - name: Build
         run: yarn build
