--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "gatsby-plugin-manifest": "^4.11.1",
     "gatsby-plugin-offline": "^5.11.1",
     "gatsby-plugin-react-helmet": "^5.11.0",
+    "gatsby-plugin-sass": "^5.19.0",
     "gatsby-plugin-sharp": "^4.11.1",
     "gatsby-remark-copy-linked-files": "^5.11.0",
     "gatsby-remark-images": "^6.11.1",
@@ -30,6 +31,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
+    "sass": "^1.54.0",
     "typeface-merriweather": "0.0.72",
     "typeface-montserrat": "0.0.75"
   },
